deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hola-mundo
  namespace: <namespace>
  labels:
    app: hola-mundo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola-mundo
  template:
    metadata:
      labels:
        app: hola-mundo
    spec:
      containers:
        - name: hola-mundo
          image: docker.io/alexvigro92/hola_mundo_oc
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
